tests/baselines/reference/module_augmentExistingAmbientVariable.errors.txt
module_augmentExistingAmbientVariable.ts(1,13): error TS2300: Duplicate identifier 'console'.
module_augmentExistingAmbientVariable.ts(3,11): error TS2300: Duplicate identifier 'console'.


==== module_augmentExistingAmbientVariable.ts (2 errors) ====
    declare var console: any;
                ~~~~~~~
!!! error TS2300: Duplicate identifier 'console'.
    
    namespace console {
              ~~~~~~~
!!! error TS2300: Duplicate identifier 'console'.
        export var x = 2;
    }